# sandbox

./: .gitignore  README.md  flake.nix  treefmt.nix
haskell/: README.md
haskell/get-realworld/: CHANGELOG.md  README.md  get-realworld.cabal  package.yaml  stack.yaml
haskell/hello/: func.hs  int.hs  koto.hs  pattern_func.hs  pattern_maching.hs
haskell/hello-ihp/: .envrc
lean/hello/: Hello.lean  lake-manifest.json  lakefile.toml
lean/hello-aeneas/: .aeneas  .gitignore  Cargo.toml  HelloAeneas.lean  Main.lean  README.md  Taskfile.yml  flake.nix  hello_aeneas.llbc  lake-manifest.json  lakefile.toml
lean/hello-mathlib/: HelloMathlib.lean  README.md  lake-manifest.json  lakefile.toml
nix/: README.md
python/coplot/: flake.nix  main.py
rust/asyncst/: Cargo.toml
rust/fornjot-d/: Cargo.toml  shell.nix
rust/hanbun-tui/: Cargo.toml
rust/hello-bevy/: Cargo.toml  Taskfile.yml  shell.nix
rust/hello-cgp/: Cargo.toml
rust/hello-dioxus/: Cargo.toml  Dioxus.toml  README.md
rust/hello-dioxus/src/: main.rs
rust/hello-gpui-tokio/: Cargo.toml  default.nix  flake.nix  shell.nix
rust/hello-ltrait/: Cargo.toml
rust/icon-base64/: Cargo.toml
rust/nand/: Cargo.toml
rust/ntex-hw/: Cargo.toml
rust/pw-list-objects/: Cargo.toml  default.nix
rust/query3/: Cargo.toml
rust/ratatui-tutorials/: Cargo.toml
rust/rayon-p/: Cargo.toml  shell.nix
rust/serde-usize/: Cargo.toml
rust/serde_t/: Cargo.toml
rust/ski/: Cargo.toml  test.ski
rust/spdump/: Cargo.toml
rust/spdump/src/: main.rs
rust/try-xflags/: Cargo.toml
rust/typed_perm/: Cargo.toml
(+42 files in other folders)
