[package]
name = "hello-dioxus"
version = "0.1.0"
authors = ["satler-git <mitsclatw24@mbr.nifty.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
