[package]
name = "spdump"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.19"
dirs = "6.0.0"
futures-util = "0.3.31"
rspotify = { version = "0.15.3", default-features = false, features = [
  "client-reqwest",
  "reqwest-rustls-tls",
  "cli",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
